<resources>
    <string name="app_name">GridImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter a search query</string>
    <string name="search_label">Search</string>
    <string name="image_content_description">Image Result</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="advanced_settings_text">Advanced search options</string>
    <string name="image_size_text">Image Size</string>
    <string name="image_color_text">Color Filter</string>
    <string name="image_type_text">Image Type</string>
    <string name="image_site_text">Site Filter</string>
    <string name="save_button_text">Save</string>
    <string name="action_share">share</string>
</resources>
