<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.aneeshjoshi.gridimagesearch.activities.SettingsActivity">

    <TextView
        android:id="@+id/tv_settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_settings_text"
        android:textSize="15sp"
        android:paddingBottom="10dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_setting_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_size_text"
            android:textSize="15sp"
            />
        <Spinner
            android:id="@+id/spnr_image_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_setting_size"
            android:layout_alignTop="@id/tv_setting_size"
            android:layout_alignBottom="@id/tv_setting_size"
            android:gravity="center"
            android:textSize="15sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_setting_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_color_text"

            android:textSize="15sp"
            />
        <Spinner
            android:id="@+id/spnr_image_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_setting_color"
            android:layout_alignTop="@id/tv_setting_color"
            android:layout_alignBottom="@id/tv_setting_color"
            android:gravity="center"
            android:textSize="15sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_setting_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_type_text"
            android:textSize="15sp"
            />
        <Spinner
            android:id="@+id/spnr_image_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_setting_type"
            android:layout_alignTop="@id/tv_setting_type"
            android:layout_alignBottom="@id/tv_setting_type"
            android:gravity="center"
            android:textSize="15sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_setting_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_site_text"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_setting_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_setting_site"
            android:layout_alignTop="@id/et_setting_site"
            android:layout_alignBottom="@id/et_setting_site"
            android:gravity="center"
            android:textSize="15sp"`
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_setting_site"
        android:text="@string/save_button_text"/>

</LinearLayout>
